# orbit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  ERRORS.md  LICENSE  README.md  docker-compose.coolify.env.example  docker-compose.coolify.yml  docker-compose.template.yml  docker-compose.yml  package.json  pnpm-lock.yaml
analysis/plans/: studio-mode-frame-capture-optimization.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  record.rs
apps/desktop/: app.config.timestamp_1772418458793.js  app.config.ts  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json
apps/desktop/scripts/: prodBeforeBundle.js
apps/desktop/src/: App.tsx  entry-server.tsx  global.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.prod.conf.json
apps/discord-bot/: package.json  wrangler.jsonc
apps/discord-bot/src/: index.ts
apps/media-server/: package.json
apps/media-server/src/: app.ts
apps/storybook/: package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1735325995918-46a167c39672.mjs
apps/storybook/.storybook/: preview.ts
apps/web/: README.md  instrumentation.node.ts  instrumentation.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.js
apps/web-cluster/: Dockerfile  package.json
apps/web-cluster/scripts/: post-deploy.ts
apps/web/actions/: loom.ts  messenger.ts
apps/web/app/: layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/web/components/: BentoScript.tsx  CommercialGetStarted.tsx  EmptyState.tsx  FileInput.tsx  ReadyToGetStarted.tsx  SignedImageUrl.tsx  Tooltip.tsx  UpgradeModal.tsx  UsageButton.tsx  VideoThumbnail.tsx
apps/web/content/: changelog.json
apps/web/data/: homepage-copy.ts  testimonials.ts
apps/web/hooks/: use-transcript.ts
apps/web/lib/: Notification.ts  Rpcs.ts  audio-enhance.ts  folder.ts  generate-ai.ts  groq-client.ts  media-client.ts  seo-metadata.ts  server.ts  tracing.ts  transcribe.ts
apps/web/public/: llms.txt  site.webmanifest
apps/web/tools/: compress-images.sh
apps/web/utils/: cors.ts  desktop.ts  flags.ts  getBootstrapData.ts  github.ts  helpers.ts  organization.ts  platform.tsx  releases.ts  web-api.ts  web-schema.ts
apps/web/workflows/: generate-ai.ts  import-loom-video.ts  process-video.ts  transcribe.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: latency.rs  main.rs
crates/camera/: Cargo.toml  README.md
crates/camera-avfoundation/: Cargo.toml  README.md
crates/camera-avfoundation/examples/: cli.rs
crates/camera-directshow/: Cargo.toml  README.md
crates/camera-directshow/examples/: cli.rs
crates/camera-directshow/src/: lib.rs
crates/camera-ffmpeg/: Cargo.toml  README.md
crates/camera-ffmpeg/examples/: cli.rs
crates/camera-ffmpeg/src/: macos.rs  windows.rs
crates/camera-mediafoundation/: Cargo.toml  README.md
crates/camera-mediafoundation/examples/: cli.rs
crates/camera-mediafoundation/src/: lib.rs
crates/camera-windows/: Cargo.toml  README.md
crates/camera-windows/examples/: cli.rs
crates/camera-windows/src/: lib.rs
crates/camera/examples/: cli.rs
crates/camera/src/: lib.rs  macos.rs  windows.rs
crates/cpal-ffmpeg/: Cargo.toml
crates/cursor-capture/: Cargo.toml
crates/cursor-capture/src/: main.rs  position.rs
crates/cursor-info/: Cargo.toml  README.md
crates/editor/: Cargo.toml  PLAYBACK-BENCHMARKS.md  PLAYBACK-FINDINGS.md
crates/editor/examples/: cli.rs  decode-benchmark.rs  playback-pipeline-benchmark.rs
crates/editor/src/: audio.rs  editor.rs  editor_instance.rs  playback.rs  segments.rs
crates/enc-avfoundation/: Cargo.toml
crates/enc-ffmpeg/: Cargo.toml
crates/enc-gif/: Cargo.toml
crates/enc-mediafoundation/: Cargo.toml
crates/export/: Cargo.toml  EXPORT-BENCHMARKS.md  EXPORT-FINDINGS.md
crates/export/examples/: export-benchmark-runner.rs  export-cli.rs
crates/export/src/: gif.rs  lib.rs  mp4.rs
crates/export/tests/: export_benchmark.rs  long_video_export.rs
crates/fail/: Cargo.toml
crates/flags/: Cargo.toml
crates/frame-converter/: Cargo.toml
crates/gpu-converters/: Cargo.toml
crates/media/: Cargo.toml
crates/media-info/: Cargo.toml  README.md
crates/mediafoundation-ffmpeg/: Cargo.toml  README.md
crates/mediafoundation-utils/: Cargo.toml
crates/orbit-test/: Cargo.toml
crates/project/: Cargo.toml
crates/recording/: BENCHMARKS.md  Cargo.toml  FINDINGS.md  run-synthetic-tests.sh
crates/recording/examples/: camera-benchmark.rs  camera.rs  encoding-benchmark.rs  memory-leak-detector.rs  playback-test-runner.rs  real-device-test-runner.rs  recording-benchmark.rs  recording-cli.rs  synthetic-test-runner.rs
crates/recording/src/: capture_pipeline.rs  cursor.rs  diagnostics.rs  instant_recording.rs  lib.rs  recovery.rs  resolution_limits.rs  screenshot.rs  studio_recording.rs  sync_calibration.rs
crates/recording/src/feeds/: camera.rs  microphone.rs
crates/recording/src/output_pipeline/: async_camera.rs  core.rs  ffmpeg.rs  macos.rs  macos_fragmented_m4s.rs  win.rs  win_fragmented_m4s.rs  win_segmented.rs  win_segmented_camera.rs
crates/recording/src/sources/: audio_mixer.rs  camera.rs  microphone.rs  native_camera.rs
crates/recording/src/sources/screen_capture/: macos.rs  mod.rs  windows.rs
crates/recording/src/test_sources/: audio.rs  config.rs  validation.rs  video.rs
crates/recording/tests/: hardware_compat.rs  recovery.rs  synthetic_recording.rs
crates/rendering/: Cargo.toml
crates/rendering-skia/: Cargo.toml  README.md
crates/sorbit-cpal/: Cargo.toml
crates/sorbit-direct3d/: Cargo.toml
crates/sorbit-ffmpeg/: Cargo.toml
crates/sorbit-ffmpeg/examples/: cli.rs
crates/sorbit-ffmpeg/src/: direct3d.rs  screencapturekit.rs
crates/sorbit-screencapturekit/: Cargo.toml  README.md
crates/sorbit-targets/: Cargo.toml
crates/timestamp/: Cargo.toml
crates/utils/: Cargo.toml
crates/video-decode/: Cargo.toml
infra/: package.json  sst.config.ts
licenses/: LICENSE-MIT
scripts/: env-cli.js  symbolicate-macos-crash.js
scripts/analytics/: migrate-dub-to-tinybird.js  shared.js
(+686 files in other folders)
