[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
orbit-utils = { path = "../../crates/utils" }
orbit-project = { path = "../../crates/project" }
orbit-rendering = { path = "../../crates/rendering" }
orbit-editor = { path = "../../crates/editor" }
orbit-media = { path = "../../crates/media" }
orbit-flags = { path = "../../crates/flags" }
orbit-recording = { path = "../../crates/recording" }
orbit-export = { path = "../../crates/export" }
orbit-camera = { path = "../../crates/camera" }
sorbit-targets = { path = "../../crates/sorbit-targets" }
serde = { workspace = true }
serde_json = "1.0.133"
tokio.workspace = true
uuid = { version = "1.11.1", features = ["v4"] }
ffmpeg = { workspace = true }
tracing.workspace = true
tracing-subscriber = "0.3.19"
flume.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true
