[package]
name = "orbit-camera-windows"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror.workspace = true
inquire = "0.7.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(windows)'.dependencies]
orbit-mediafoundation-utils = { path = "../mediafoundation-utils" }
orbit-camera-mediafoundation = { path = "../camera-mediafoundation" }
orbit-camera-directshow = { path = "../camera-directshow" }

windows = { workspace = true }
windows-core = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
inquire = "0.7.5"
