[package]
name = "orbit-editor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[example]]
name = "decode-benchmark"
path = "examples/decode-benchmark.rs"

[[example]]
name = "playback-pipeline-benchmark"
path = "examples/playback-pipeline-benchmark.rs"

[dependencies]
orbit-media = { path = "../media" }
orbit-project = { path = "../project" }
orbit-rendering = { path = "../rendering" }
orbit-audio = { path = "../audio" }
orbit-media-info = { path = "../media-info" }

tokio = { workspace = true, features = ["macros", "process", "fs"] }
cpal.workspace = true
axum = { version = "0.7.5", features = ["ws"] }
ffmpeg.workspace = true
specta.workspace = true
serde = { workspace = true }
sentry.workspace = true
futures = { workspace = true }
tracing.workspace = true
flume.workspace = true
tokio-util = "0.7.15"
ringbuf = "0.4.8"
lru = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Media"] }