[package]
name = "orbit-recording"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
test-utils = []

[dependencies]
orbit-audio = { path = "../audio" }
orbit-fail = { path = "../fail" }
orbit-project = { path = "../project" }
orbit-media = { path = "../media" }
orbit-rendering = { path = "../rendering" }
orbit-flags = { path = "../flags" }
orbit-utils = { path = "../utils" }
sorbit-targets = { path = "../sorbit-targets" }
orbit-cursor-capture = { path = "../cursor-capture" }
orbit-media-info = { path = "../media-info" }
orbit-cursor-info = { path = "../cursor-info" }
orbit-camera = { path = "../camera", features = ["serde", "specta"] }
orbit-camera-ffmpeg = { path = "../camera-ffmpeg" }
orbit-enc-ffmpeg = { path = "../enc-ffmpeg" }
orbit-frame-converter = { path = "../frame-converter" }
orbit-timestamp = { path = "../timestamp" }
sorbit-ffmpeg = { path = "../sorbit-ffmpeg" }

specta = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
thiserror = { workspace = true }
ffmpeg = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

serde_json = "1"
chrono = "0.4.38"
tracing.workspace = true
device_query = "4.0.1"
image = "0.25.2"
either = "1.13.0"
tracing-subscriber = { version = "0.3.19" }
relative-path = "1.9.3"
tokio-util = "0.7.15"
sha2 = "0.10.9"
hex = "0.4.3"
ringbuf = "0.4.8"
cpal.workspace = true
indexmap = "2.10.0"
kameo = "0.17.2"
inquire = "0.7.5"
replace_with = "0.1.8"
retry = "2.1.0"
sysinfo = "0.35"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
screencapturekit = "0.3.5"
cocoa = "0.26.0"
objc = "0.2.7"
objc2 = "0.6"
objc2-app-kit = "0.3.1"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
foreign-types-shared = "0.3"
libc = "0.2"

sorbit-screencapturekit = { path = "../sorbit-screencapturekit" }
orbit-enc-avfoundation = { path = "../enc-avfoundation" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_Storage_Xps",
] }

orbit-enc-mediafoundation = { path = "../enc-mediafoundation" }
orbit-mediafoundation-ffmpeg = { path = "../mediafoundation-ffmpeg" }
orbit-mediafoundation-utils = { path = "../mediafoundation-utils" }
orbit-camera-windows = { path = "../camera-windows" }
sorbit-direct3d = { path = "../sorbit-direct3d" }
sorbit-cpal = { path = "../sorbit-cpal" }

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { workspace = true, features = ["Win32_UI_HiDpi"] }

[[test]]
name = "synthetic_recording"
required-features = ["test-utils"]

[[example]]
name = "synthetic-test-runner"
required-features = ["test-utils"]

[[example]]
name = "playback-test-runner"

[[example]]
name = "real-device-test-runner"
