[package]
name = "sorbit-ffmpeg"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ffmpeg = { workspace = true }
cpal = { workspace = true }
sorbit-cpal = { optional = true, path = "../sorbit-cpal" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(windows)'.dependencies]
sorbit-direct3d = { path = "../sorbit-direct3d" }
windows = { workspace = true, features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
sorbit-screencapturekit = { path = "../sorbit-screencapturekit" }
cidre = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
sorbit-targets = { path = "../sorbit-targets" }

[lints]
workspace = true
